# Web_GUI_parser

./: .gitignore  LICENSE  README.md  css.py  js.py  pyproject.toml  test.py  test1.py  test2.py  utils.py  wooey.py
src/wooey/: __init__.py  _html.py  _wooey.py  css.py  js.py  utils.py
src/wooey.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
static/: index.css  index.html  index.js
tests/: requirements.txt  test1.py  test2.py
