[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
requires = ["setuptools >= 40.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wooey"
version = "0.15"
authors = [
    { name = "Archaic Mage", email = "sohasoham811@gmail.com" },
]
maintainers = [
    { name = "Archaic Mage", email = "sohasoham811@gmail.com" },
]
description = "Package to process program arguments through a web-based GUI"
readme = "README.md"
dependencies = [
    "bottle",
]
requires-python = ">=3.10"
keywords = ["web-based-gui", "argparser", "arguments", "command-line", "gui", "web-based"]
classifiers = [
"Development Status :: 3 - Alpha",
"Environment :: Web Environment",
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
"Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Archaic-Mage/Wooey"
Issues = "https://github.com/Archaic-Mage/Wooey/issues"
